force-app/main/default/objects/MapQueue__mdt/MapQueue__mdt.object-meta.xml
<CustomObject>
    <label>Map Queue</label>
    <pluralLabel>Map Queues</pluralLabel>
</CustomObject>