force-app/main/default/objects/MapQueue__mdt/fields/CaseQueue_Label__c.field-meta.xml
<CustomField>
    <fullName>CaseQueue_Label__c</fullName>
    <label>Case Queue Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>