force-app/main/default/objects/MapQueue__mdt/fields/Messaging_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Queue_Id__c</fullName>
    <label>Messaging Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>