force-app/main/default/objects/MapQueue__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>NamespacePrefix</columns>
    <columns>Messaging_Queue_Label__c</columns>
    <columns>CaseQueue_Label__c</columns>
    <columns>Messaging_Queue_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>